@@ -1,5 +1,12 @@
 2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
+	* srfi-14.c: Okay.  Now I got it.  Really.  This time it's fixed.
+	Guaranteed. (Maybe)
+	
+	* srfi-19.scm: Define `current-time' before exporting it.
+
+2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
+
 	* srfi-14.c: Fix for bug caused by brain-malfunctioning on my
 	side.  Bit sets were handled wrong because I couldn't tell bit
 	counts from byte counts.  Also, the bit array should be 256 / 8
